Personalize website with name

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html> 
     <head>
-        <title>This is the Title of the Page</title>
+        <title>Brittany Stubbs</title>
     </head>
     <body>
-        <h1>This is the Body of the Page</h1>
-        <p>Anything within the body of a web pages is displayed in the main browser window.</p>
+        <h1>First Website</h1>
         <p>Hello World</p>
     </body>
 </html>
